[gd_scene load_steps=2 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]

[node name="Title" type="Node2D"]

script = ExtResource( 1 )

[node name="deck" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 546.0
margin_top = 311.0
margin_right = 618.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit Deck"
flat = false
align = 1

[node name="game" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 355.0
margin_top = 310.0
margin_right = 443.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Game"
flat = false
align = 1

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 454.0
margin_top = 189.0
margin_right = 533.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Not Faeria"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="solo" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 428.0
margin_top = 408.0
margin_right = 539.0
margin_bottom = 428.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "start solo game"
flat = false
align = 1

[node name="decks" type="OptionButton" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_top = 432.0
margin_right = 503.0
margin_bottom = 452.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]

[connection signal="pressed" from="deck" to="." method="_on_deck_pressed"]

[connection signal="pressed" from="game" to="." method="_on_game_pressed"]

[connection signal="pressed" from="solo" to="." method="_on_solo_pressed"]

[connection signal="item_selected" from="decks" to="." method="_on_decks_item_selected"]


